--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">Linear</a></h1>
-					<span class="tag">By TEMPLATED</span>
+					<h4><a href="#">Teagan Nouska</a></h4>
+					<!-- <span class="tag"></span> -->
 				</div>
 			</div>
 		</div>
@@ -39,11 +39,11 @@
 		<div id="featured">
 			<div class="container">
 				<header>
-					<h2>Welcome to Linear</h2>
+					<h2>A little about me</h2>
 				</header>
-				<p>This is <strong>Linear</strong>, a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) &ndash; just give us credit! Check out more of our stuff at <a href="http://templated.co">our site</a> or follow us on <a href="http://twitter.com/templatedco">Twitter</a>.</p>
+				<p></p>
 				<hr />
-				<div class="row">
+				<!-- <div class="row">
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-briefcase"></span></span>
 						<h3>Maecenas luctus lectus</h3>
@@ -63,7 +63,7 @@
 						<a href="#" class="button button-style1">Read More</a>
 					</section>
 
-				</div>
+				</div> -->
 			</div>
 		</div>
 
@@ -73,35 +73,39 @@
 
 				<div class="row">
 					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic01.jpg" alt=""></a>
+						<a href="https://infinite-chamber-98001.herokuapp.com/" class="image full"><img src="images/pic01.jpg" alt=""></a>
 						<header>
-							<h2>Mauris vulputate dolor</h2>
+							<h2>Travel Tracker</h2>
 						</header>
-						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+						<p>This app allows the user to upload a .GPX file taken from their own personal GPS device and visualize the paths that they
+						have taken on a map. They will also be able to upload a .GPX file containing Waypoints or Points of Interest and those will
+						also have a visual representation on the same map.</p>
 					</section>				
 					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic02.jpg" alt=""></a>
+						<a href="https://mysterious-inlet-12479.herokuapp.com/#!/home" class="image full"><img src="images/pic02.jpg" alt=""></a>
 						<header>
-							<h2>Mauris vulputate dolor</h2>
+							<h2>Pet Hotel</h2>
 						</header>
-						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+						<p>This application will give the user the ability to create new clients and then tie those clients to each of their pets that
+							are staying at the hotel as new enteries into the system.
+						</p>
 					</section>				
 				</div>
 
 				<div class="row">
 					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic03.jpg" alt=""></a>
+						<a href="https://github.com/tnouska/reflection-weekend-project" class="image full"><img src="images/pic03.jpg" alt=""></a>
 						<header>
-							<h2>Mauris vulputate dolor</h2>
+							<h2>Recollection of Experience</h2>
 						</header>
-						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+						<p>Recollection of Experience app will allow the user to post about an exciting moment in time, and then look back on a later date all the past events that they have posted.</p>
 					</section>				
 					<section class="6u">
 						<a href="#" class="image full"><img src="images/pic04.jpg" alt=""></a>
 						<header>
-							<h2>Mauris vulputate dolor</h2>
+							<h2>More To Come</h2>
 						</header>
-						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+						<p>In pursuit of new experiences.</p>
 					</section>				
 				</div>
 			
@@ -137,7 +141,7 @@
 	<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a>, <a href="http://SeekWallpaper.com">SeekWallpaper</a>
+				Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a>, <a href="http://SeekWallpaper.com">SeekWallpaper</a>, <a href="https://www.designevo.com/">DesignEvo</a>
 			</div>
 		</div>
 
