added personal photo

--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h4><a href="#">Teagan Nouska</a></h4>
-					<!-- <span class="tag"></span> -->
+					<img src="images/pic05.png"  width="240" height="235"class="tag"></img>
+					<h1><a href="#">Teagan Nouska</a></h1>
+					<br/>
+					<header>
+						<h2>Full Stack Web Developer</h2>	
+					</header>
+					
+
 				</div>
 			</div>
 		</div>
@@ -41,7 +47,7 @@
 				<header>
 					<h2>A little about me</h2>
 				</header>
-				<p></p>
+				<p>TBD</p>
 				<hr />
 				<!-- <div class="row">
 					<section class="4u">
@@ -70,7 +76,11 @@
 	<!-- Main -->
 		<div id="main">
 			<div id="content" class="container">
-
+				<header>
+					<h2>
+						Projects
+					</h2>
+				</header>
 				<div class="row">
 					<section class="6u">
 						<a href="https://infinite-chamber-98001.herokuapp.com/" class="image full"><img src="images/pic01.jpg" alt=""></a>
