--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<header>
 					<h2>A little about me</h2>
 				</header>
-				<p>TBD</p>
+				<p>Hello my name is Teagan Nouska, and I am a Full Stack Developer. But I did not always have the role of developer, one role that I always have been proud of having would be a role as a learner. I enjoy learning new things and using my newely acquired knowledge to help those around me. </p>
 				<hr />
 				<!-- <div class="row">
 					<section class="4u">
@@ -126,7 +126,7 @@
 		<div id="tweet">
 			<div class="container">
 				<section>
-					<blockquote>&ldquo;TBD&rdquo;</blockquote>
+					<blockquote>&ldquo;A moment's insight is sometimes worth a life's experience.&rdquo;</blockquote>
 				</section>
 			</div>
 		</div>
