updated with resume and group project

--- a/index.html
+++ b/index.html
@@ -5,51 +5,57 @@
     Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Teagan Nouska</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-panels.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
-		</noscript>
-	</head>
-	<body class="homepage">
+
+<head>
+	<title>Teagan Nouska</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="js/skel.min.js"></script>
+	<script src="js/skel-panels.min.js"></script>
+	<script src="js/init.js"></script>
+	<noscript>
+		<link rel="stylesheet" href="css/skel-noscript.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style-desktop.css" />
+	</noscript>
+</head>
+
+<body class="homepage">
 
 	<!-- Header -->
-		<div id="header">
-			<div class="container"> 
-				
-				<!-- Logo -->
-				<div id="logo">
-					<img src="images/pic05.png"  width="240" height="235"class="tag"></img>
-					<h1><a href="#">Teagan Nouska</a></h1>
-					<br/>
-					<header>
-						<h2>Full Stack Web Developer</h2>	
-					</header>
-					
+	<div id="header">
+		<div class="container">
 
-				</div>
+			<!-- Logo -->
+			<div id="logo">
+				<img src="images/pic05.png" width="240" height="235" class="tag"></img>
+				<h1>
+					<a href="#">Teagan Nouska</a>
+				</h1>
+				<br/>
+				<header>
+					<h2>Full Stack Web Developer</h2>
+				</header>
+
+
 			</div>
 		</div>
+	</div>
 
 	<!-- Featured -->
-		<div id="featured">
-			<div class="container">
-				<header>
-					<h2>A little about me</h2>
-				</header>
-				<p>Hello my name is Teagan Nouska, and I am a Full Stack Developer. But I did not always have the role of developer, one role that I always have been proud of having would be a role as a learner. I enjoy learning new things and using my newely acquired knowledge to help those around me. </p>
-				<hr />
-				<!-- <div class="row">
+	<div id="featured">
+		<div class="container">
+			<header>
+				<h2>A little about me</h2>
+			</header>
+			<p>Hello my name is Teagan Nouska, and I am a Full Stack Developer. But I did not always have the role of developer, one
+				role that I always have been proud of having would be a role as a learner. I enjoy learning new things and using my newely
+				acquired knowledge to help those around me. </p>
+			<hr />
+			<!-- <div class="row">
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-briefcase"></span></span>
 						<h3>Maecenas luctus lectus</h3>
@@ -70,90 +76,141 @@
 					</section>
 
 				</div> -->
-			</div>
 		</div>
+	</div>
 
 	<!-- Main -->
-		<div id="main">
-			<div id="content" class="container">
-				<header>
-					<h2>
-						Projects
-					</h2>
-				</header>
-				<div class="row">
-					<section class="6u">
-						<a href="https://infinite-chamber-98001.herokuapp.com/" class="image full"><img src="images/pic01.jpg" alt=""></a>
-						<header>
-							<h2>Travel Tracker</h2>
-						</header>
-						<p>This app allows the user to upload a .GPX file taken from their own personal GPS device and visualize the paths that they
-						have taken on a map. They will also be able to upload a .GPX file containing Waypoints or Points of Interest and those will
-						also have a visual representation on the same map.</p>
-					</section>				
-					<section class="6u">
-						<a href="https://mysterious-inlet-12479.herokuapp.com/#!/home" class="image full"><img src="images/pic02.jpg" alt=""></a>
-						<header>
-							<h2>Pet Hotel</h2>
-						</header>
-						<p>This application will give the user the ability to create new clients and then tie those clients to each of their pets that
-							are staying at the hotel as new enteries into the system.
-						</p>
-					</section>				
-				</div>
+	<div id="main">
+		<div id="content" class="container">
+			<header>
+				<h2>
+					Projects
+				</h2>
+			</header>
+			<div class="row">
+				<section class="6u">
+					<a href="https://strudelhaus-tnouska.herokuapp.com/" class="image full">
+						<img src="images/pic7.jpg" alt="">
+					</a>
+					<header>
+						<h2>Team Strudel Haus</h2>
+					</header>
+					<p> Full-stack application that facilitates online fundraising sales, tracks detailed fundraising sales data, and streamlines
+					the entire fundraising process. There will be three types of users who interact with this application: Administrator, Organization
+					Leader, and Customer. The Administrator (Thomas Ruhland) will be able to create and manage organizations, fundraising campaigns
+					and strudel products, and will be able to view their current production pipeline based on campaign dates. An Organization
+					leader will be able to manage all orders for each campaign tied to their organization, as well as access current sales data
+					for each campaign. Finally, a Customer will be able to purchase strudels via our fundraising sales portal (driven by Square).
+					</p>
+				</section>
+				<section class="6u">
+					<a href="https://infinite-chamber-98001.herokuapp.com/" class="image full">
+						<img src="images/pic01.jpg" alt="">
+					</a>
+					<header>
+						<h2>Travel Tracker</h2>
+					</header>
+					<p>This app allows the user to upload a .GPX file taken from their own personal GPS device and visualize the paths that
+						they have taken on a map. They will also be able to upload a .GPX file containing Waypoints or Points of Interest and
+						those will also have a visual representation on the same map.</p>
+				</section>
 
-				<div class="row">
-					<section class="6u">
-						<a href="https://github.com/tnouska/reflection-weekend-project" class="image full"><img src="images/pic03.jpg" alt=""></a>
-						<header>
-							<h2>Recollection of Experience</h2>
-						</header>
-						<p>Recollection of Experience app will allow the user to post about an exciting moment in time, and then look back on a later date all the past events that they have posted.</p>
-					</section>				
-					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic04.jpg" alt=""></a>
-						<header>
-							<h2>More To Come</h2>
-						</header>
-						<p>In pursuit of new experiences.</p>
-					</section>				
-				</div>
-			
 			</div>
+
+			<div class="row">
+				<section class="6u">
+					<a href="https://mysterious-inlet-12479.herokuapp.com/#!/home" class="image full">
+						<img src="images/pic02.jpg" alt="">
+					</a>
+					<header>
+						<h2>Pet Hotel</h2>
+					</header>
+					<p>This application will give the user the ability to create new clients and then tie those clients to each of their pets
+						that are staying at the hotel as new enteries into the system.
+					</p>
+				</section>
+				<section class="6u">
+					<a href="https://github.com/tnouska/reflection-weekend-project" class="image full">
+						<img src="images/pic03.jpg" alt="">
+					</a>
+					<header>
+						<h2>Recollection of Experience</h2>
+					</header>
+					<p>Recollection of Experience app will allow the user to post about an exciting moment in time, and then look back on a
+						later date all the past events that they have posted.</p>
+				</section>
+			</div>
+
+			<div class="row">
+				<section class="6u">
+					<a href="#" class="image full">
+						<img src="images/pic04.jpg" alt="">
+					</a>
+					<header>
+						<h2>More To Come</h2>
+					</header>
+					<p>In pursuit of new experiences.</p>
+				</section>
+			</div>
+
+
 		</div>
+	</div>
 
 	<!-- Tweet -->
-		<div id="tweet">
-			<div class="container">
-				<section>
-					<blockquote>&ldquo;A moment's insight is sometimes worth a life's experience.&rdquo;</blockquote>
-				</section>
-			</div>
+	<div id="tweet">
+		<div class="container">
+			<section>
+				<blockquote>&ldquo;A moment's insight is sometimes worth a life's experience.&rdquo;</blockquote>
+			</section>
 		</div>
+	</div>
 
 	<!-- Footer -->
-		<div id="footer">
-			<div class="container">
-				<section>
-					<header>
-						<h2>Get in touch</h2>
-						<span class="byline">Please reach out on any of the following.</span>
-					</header>
-					<ul class="contact">
-						<li><a href="https://linkedin.com/in/tnouska" class="fa fa-linkedin"><span>LinkedIn</span></a></li>
-						<li><a href="https://github.com/tnouska" class="fa fa-github"><span>GitHub</span></a></li>
-						<li><a href="mailto:tnouska@gmail.com" class="fa fa-envelope"><span>Email</span></a></li>
-					</ul>
-				</section>
-			</div>
+	<div id="footer">
+		<div class="container">
+			<section>
+				<header>
+					<h2>Get in touch</h2>
+					<span class="byline">Please reach out on any of the following.</span>
+				</header>
+				<ul class="contact">
+					<li>
+						<a href="https://linkedin.com/in/tnouska" class="fa fa-linkedin">
+							<span>LinkedIn</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/tnouska" class="fa fa-github">
+							<span>GitHub</span>
+						</a>
+					</li>
+					<li>
+						<a href="mailto:tnouska@gmail.com" class="fa fa-envelope">
+							<span>Email</span>
+						</a>
+					</li>
+					<li>
+						<a href="resume/Teagan.Nouska.FullStack.Dev.pdf" class="fa fa-file">
+							<span>Resume</span>
+						</a>
+					</li>
+				</ul>
+			</section>
 		</div>
+	</div>
 
 	<!-- Copyright -->
-		<div id="copyright">
-			<div class="container">
-				Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a>, <a href="http://SeekWallpaper.com">SeekWallpaper</a>, <a href="https://www.designevo.com/">DesignEvo</a>
-			</div>
+	<div id="copyright">
+		<div class="container">
+			Design:
+			<a href="http://templated.co">TEMPLATED</a> Images:
+			<a href="http://unsplash.com">Unsplash</a>,
+			<a href="http://SeekWallpaper.com">SeekWallpaper</a>,
+			<a href="https://www.designevo.com/">DesignEvo</a>
 		</div>
+	</div>
 
-	</body>
+</body>
+
 </html>
